# libdog

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: run_tests.yml
demo/: CMakeLists.txt  main.cpp  random_moves.cpp  usage.cpp
include/libdog/: Action.hpp  Area.hpp  BoardPosition.hpp  BoardState.hpp  BoardUtil.hpp  Card.hpp  CardStack.hpp  CardsState.hpp  Constants.hpp  DogGame.hpp  Notation.hpp  Piece.hpp  PieceRef.hpp  libdog.hpp
src/: Action.hpp  Area.cpp  Area.hpp  BoardPosition.cpp  BoardPosition.hpp  BoardState.cpp  BoardState.hpp  Card.cpp  Card.hpp  CardPlay.hpp  CardStack.cpp  CardStack.hpp  CardsState.cpp  CardsState.hpp  Constants.hpp  Debug.hpp  Deck.hpp  DogGame.cpp  DogGame.hpp  Hand.hpp  Notation.cpp  Notation.hpp  Piece.hpp  PieceRef.hpp  Util.hpp  debug.hpp  main.cpp
test/: Game.cpp  NotationParsing.cpp  NotationParsingBoard.cpp  Performance.cpp  basic.cpp
